# assistant

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
src/: app.rs  config.rs  handlers.rs  lib.rs  main.rs  session.rs
src/entities/: keywords.rs  mod.rs  note.rs  note_info.rs
src/handlers/: add.rs  list.rs  mod.rs  query.rs  remove.rs
src/migrations/: mod.rs  versions.rs
src/services/: mod.rs  notes.rs
