[package]
name = "assistant"
version = "0.3.0"
edition = "2021"

[dependencies]
barrel = { version = "0.7.0", features = ["pg"] }
carapax = { version = "0.29.0", features = ["access", "dialogue", "session-redis", "webhook"] }
clap = { version = "4.5.3", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
log = "0.4.25"
redis = { version = "0.28.0", features = ["aio", "connection-manager", "tokio-comp"] }
refinery = { version = "0.8.15", features = ["tokio-postgres"] }
serde = "1.0.218"
serde_json = "1.0.139"
serde_yaml = "0.9.34"  # TODO: switch to toml
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
